# TomjWolcott-AutonoTorpedo-V2_2

./: Cargo.toml  Embed.toml
.cargo/: config.toml
libs/MMC5983/: Cargo.toml  LICENSE  README.md
libs/MMC5983/.github/workflows/: action.yml
libs/MMC5983/src/: device_impl.rs  interface.rs  lib.rs  magnetometer.rs  register_address.rs  types.rs
libs/ms5837/: Cargo.toml  README.md
libs/ms5837/src/: lib.rs
src/: adc_tasks.rs  himax_sdk.rs  macros.rs  main.rs  motor_controller.rs  motor_tasks.rs  sensor_tasks.rs
src/comms/: config.rs  mod.rs
